added styles for mobile responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
   color: #fff;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    height: 100vh;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
